--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -14,7 +14,6 @@
     "import requests\n",
     "import random\n",
     "import time\n",
-    "#from config import api_key\n",
     "from scipy.stats import linregress\n",
     "\n",
     "# Import API key\n",
@@ -48,7 +47,7 @@
     }
    ],
    "source": [
-    " # List for holding lat_lngs and cities\n",
+    "# List for holding lat_lngs and cities\n",
     "lat_lngs = []\n",
     "cities = []\n",
     "\n",
@@ -1344,7 +1343,7 @@
     "wind_speed = []\n",
     "date = []\n",
     "\n",
-    "# Start the call counter \n",
+    "# Set counter to 1 \n",
     "record = 1\n",
     "\n",
     "#loop through the cities in the city list\n",
