--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -1332,7 +1332,7 @@
     "print(\"Beginning Data Retrieval\")\n",
     "print(\"------------------------------\")\n",
     "\n",
-    "#create empty lists to append the API data\n",
+    "#create empty lists to append the API results\n",
     "city_name = []\n",
     "country = []\n",
     "lat = []\n",
